Sat Sep 14 06:08:10 2013  Eric Hodel  <drbrain@segment7.net>

	* dir.c (dir_s_glob):  [DOC] Improve wording and layout.

	* dir.c (file_s_fnmatch):  ditto.

	* dir.c (Init_Dir):  [DOC] Document File::Constants::FNM_XXX
	  constants.  (These won't show up in RDoc until a new RDoc is
	  imported.)

Thu Sep 12 14:58:58 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic.find_proxy): return nil if
	  http_proxy environment variable is empty string.
	  [ruby-core:57140] [Bug #8898]

Fri Sep 13 10:40:28 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 2.1.3

	  Fixed installing platform gems

	  Restored concurrent requires

	  Fixed installing gems with extensions with --install-dir

	  Fixed `gem fetch -v` to install the latest version

	  Fixed installing gems with "./" in their files entries

	* test/rubygems/test_gem_package.rb:  Tests for the above.

	* NEWS:  Updated for RubyGems 2.1.3

Thu Sep 12 22:40:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SIGNEDNESS): macro to check signedness of a
	  type.

	* configure.in (size_t): must be unsigned.
	  [ruby-core:57149] [Feature #8890]

Thu Sep 12 22:37:08 2013  Anton Ovchinnikov  <revolver112@gmail.com>

	* ext/bigdecimal/bigdecimal.c, ext/digest/md5/md5.c,
	  ext/json/fbuffer/fbuffer.h, ext/json/generator/generator.c:
	  Eliminate less-than-zero checks for unsigned variables.
	  According to section 4.1.5 of C89 standard, size_t is an unsigned
	  type.  These checks were found with 'cppcheck' static analysis tool.
	  [ruby-core:57117] [Feature #8890]

Thu Sep 12 21:35:46 2013  Naohisa Goto  <ngotogenome@gmail.com>

	* Makefile.in (libruby-static.a): change LDFLAGS order. LDFLAGS may
	  include library path that should be specified before LIBS.
	  [ruby-dev:47707] [Bug #8901]

Thu Sep 12 20:07:29 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vsnprintf.c (MAXEXP, MAXFRACT): calculate depending on constants in
	  float.h.
