@@ -1,3 +1,7 @@
+Sun Sep 15 13:31:23 2013  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* rational.c (nurat_div): reverted r28844, r28886 and r28887.
+
 Sat Sep 14 06:08:10 2013  Eric Hodel  <drbrain@segment7.net>
 
 	* dir.c (dir_s_glob):  [DOC] Improve wording and layout.
